# sys-stats-rs

./: .gitignore  Cargo.toml  README.md
examples/: info.rs
src/: lib.rs  macos.rs  main.rs  windows.rs
src/cpu/: linux.rs  macos.rs  mod.rs  windows.rs
src/gpu/: linux.rs  macos.rs  mod.rs  windows.rs
src/memory/: linux.rs  macos.rs  mod.rs  windows.rs
src/npu/: linux.rs  macos.rs  mod.rs  windows.rs
src/soc/: linux.rs  macos.rs  mod.rs  soc.json  windows.rs
src/soc/db/apple/: soc.json
