[package]
name = "sys-stats"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-metal = { version = "0.2.2", features = ["MTLDevice"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "winerror", "dxgi"] }
nvml-wrapper = "0.10.0"
adlx = "0.0.0-alpha.1"
anyhow = "1.0.93"
windows = "0.34.0"
openvino = "0.8.0"

[dependencies]
sys-info = "0.9.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"