[package]
name = "sys-stats"
version = "0.3.9"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.2"
objc2-metal = { version = "0.3.1", features = ["MTLDevice"] }
os-version = "0.2.0"
sysinfo = "0.37.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }
nvml-wrapper = "0.11.0"
anyhow = "1.0.82"
windows = { version = "0.62.0", features = ["Win32_Graphics_DXCore"] }
sysinfo = "0.37.0"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.11.0"
sysinfo = "0.37.0"

[dependencies]
sys-info = "0.9.1"                                     # TODO, remove this and use sysinfo instead
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum_macros = "0.27.2"
strum = "0.27.2"
